k8s/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pms-frontend
  labels:
    app: pms-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: pms-frontend
