k8s/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pms-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pms-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: pms-backend
            port:
              number: 8080
      - path: /keycloak(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: keycloak
            port:
              number: 8080
